Updated homepage in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "ng-autocomplete",
     "version": "0.0.1",
-    "homepage": "https://github.com/nitayneeman/ng-autocomplete",
+    "homepage": "http://nitayneeman.github.io/ng-autocomplete/",
     "keywords": [
         "angularjs",
         "javascript",
